Added an about section and a section about the matching system of the app. Also added a media query in the main.css file to help with responsiveness

--- a/index.html
+++ b/index.html
@@ -2,22 +2,23 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <title>Dating</title>
   <!-- font Awesome -->
   <script src="https://kit.fontawesome.com/e77eb6c954.js" crossorigin="anonymous"></script>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Galada&family=Josefin+Sans:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Galada&family=Josefin+Sans:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
 
   <!-- Stylesheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="main.css">
 
   <!-- Bootstrap Scripts -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -33,37 +34,75 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#About">About</a>
+            </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href=" #">hello</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link" href=" #">Subscriptions</a>
+            </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href=" #">Hello</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link" href=" #">FAQ</a>
+            </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href=" #">Contact Us</a>
-          </li>
+            <li class="nav-item">
+              <a class="nav-link" href=" #">Contact Us</a>
+            </li>
 
-          <li class="nav-item">
-            <a class="nav-link" href=" #">maybe</a>
-          </li>
-
-        </ul>
+          </ul>
         </div>
       </nav>
 
+      <div class="header-section">
+        <h1 class="header-title">Discover Your Love</h1>
+        <h2 class="header-sub">Meet wonderful people</h2>
+      </div>
+    </div>
+  </section>
 
+  <!-- Main Content -->
+  <div class="container-main">
+  <section id="About">
+
+      <div class="row">
+
+        <div class="col-lg-6">
+          <h2 class="about-title">About</h2>
+          <p class="main-text">Founded in 2020 by Pod Two, Lovepoint is an app that strives to ignite love by creating authentic connections</p>
+        </div>
+        <div class="col-lg-6 about-img-container">
+          <img class="content-img" src="Images/about-img.jpg" alt="">
+        </div>
+
+      </div>
+
+  </section>
+  </div>
+
+  <section id="feature-algorithm">
+
+    <div class="container-main">
+      <div class="row">
+
+        <div class="col-lg-6 col-md-12">
+          <img class="feature-img" src="Images/heart.png" alt="">
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <h2 class="algorithm-title">Innovative Matching</h2>
+          <p class="main-text">Our industry leading algorithm ensures you are accuratately matched with others that are perfect for you.</p>
+        </div>
+
+      </div>
+    </div>
+
+  </section>
 
   <footer>
 
   </footer>
-  <script type="text/javascript" src="index.js"></script></script>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
