--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
               </li>
     
               <li class="nav-item">
-                <a class="nav-link" href=" #">Q & A</a>
+                <a class="nav-link" href=" #">FAQ</a>
               </li>
     
               <li class="nav-item">
