Added a voted the best app of 2020 section

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href=" #">Subscriptions</a>
+              <a class="nav-link" href="blog.html">Blog</a>
             </li>
 
             <li class="nav-item">
@@ -48,7 +48,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href=" #">Contact Us</a>
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
 
           </ul>
@@ -90,8 +90,25 @@
           <img class="feature-img" src="Images/heart.png" alt="">
         </div>
         <div class="col-lg-6 col-md-12">
-          <h2 class="algorithm-title">Innovative Matching</h2>
+          <h2 class="feature-title">Innovative Matching</h2>
           <p class="main-text">Our industry leading algorithm ensures you are accuratately matched with others that are perfect for you.</p>
+        </div>
+
+      </div>
+    </div>
+
+  </section>
+
+  <section id="best-app">
+
+    <div class="container-main">
+      <div class="row">
+
+        <div class="col-lg-6 col-md-12">
+          <img class="feature-img" src="Images/heart.png" alt="">
+        </div>
+        <div class="col-lg-6 col-md-12">
+          <h2 class="feature-title">Voted #1 Best Dating App of 2020</h2>
         </div>
 
       </div>
