Made some changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-xl sticky-top">
     <a class="navbar-brand" href="#">Lovepoint</a>
 
@@ -53,90 +53,67 @@
   </nav>
 
   <section id="header">
+
     <div class="container-fluid">
-
-      <!-- Navbar -->
-      <!-- <nav class="navbar navbar-expand-xl">
-        <a class="navbar-brand" href="#">Lovepoint</a>
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="fa fa-bars"></i>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="#About">About</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="blog.html">Blog</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href=" #">FAQ</a>
-            </li>
-
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
-            </li>
-
-          </ul>
-        </div>
-      </nav> -->
 
       <div class="header-section">
         <h1 class="header-title">Discover Your Love</h1>
         <h2 class="header-sub">Meet wonderful people</h2>
       </div>
     </div>
+
   </section>
 
   <!-- Main Content -->
   <div class="container-main">
-  <section id="About">
+    <section id="About">
 
+      <!-- Grid -->
       <div class="row">
-
+        <!-- Grid Column -->
         <div class="col-lg-6">
           <h2 class="about-title">About</h2>
           <p class="main-text">Founded in 2020 by Pod Two, Lovepoint is an app that strives to ignite love by creating authentic connections</p>
         </div>
+        <!-- Grid Column -->
         <div class="col-lg-6 about-img-container">
           <img class="content-img" src="Images/about-img.jpg" alt="">
         </div>
 
       </div>
 
-  </section>
+    </section>
   </div>
 
   <section id="feature-algorithm">
-
     <div class="container-main">
+      <!-- Grid -->
       <div class="row">
-
+        <!-- Grid Column -->
         <div class="col-lg-6 col-md-12">
           <img class="feature-img" src="Images/heart.png" alt="">
         </div>
+        <!-- Grid Column -->
         <div class="col-lg-6 col-md-12">
           <h2 class="feature-title">Innovative Matching</h2>
           <p class="main-text">Our industry leading algorithm ensures you are accuratately matched with others that are perfect for you.</p>
         </div>
 
       </div>
-    </div>
 
+    </div>
   </section>
 
   <section id="best-app">
 
     <div class="container-main">
+      <!-- Grid -->
       <div class="row">
-
+        <!-- Grid Column -->
         <div class="col-lg-6 col-md-12">
           <img class="feature-img" src="Images/best.png" alt="">
         </div>
+        <!-- Grid Column -->
         <div class="col-lg-6 col-md-12">
           <h2 class="feature-title">Voted #1 Best Dating App of 2020</h2>
         </div>
@@ -201,16 +178,16 @@
         <div class="col-md-2 col-lg-2 text-center mx-auto my-4">
 
           <!-- Social buttons -->
-  <div class="socials">
-    <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
-    <a href="#"><i class="fab fa-facebook-f"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></i></a>
-    <a href="#"><i class="fab fa-google-plus-g"></i></a>
-    <a href="#"><i class="fab fa-youtube"></i></a><br>
+          <div class="socials">
+            <h5 class="font-weight-bold text-uppercase mb-4">Follow Us</h5>
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></i></a>
+            <a href="#"><i class="fab fa-google-plus-g"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a><br>
 
 
-  </div>
+          </div>
 
         </div>
         <!-- Grid column -->
@@ -222,7 +199,6 @@
     <!-- Footer Links -->
 
   </footer>
-  <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
