--- a/Q&A.html
+++ b/Q&A.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FAQ & More!</title>
     <link href="https://fonts.googleapis.com/css2?family=Galada&family=Josefin+Sans:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="Q&A.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <title>FAQ & More!</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-xl sticky-top">
@@ -51,7 +51,8 @@
     </header>
     </div>
     <br> 
-    <div class="Organizer"> 
+    <div class= "row"> 
+        <div class="column1"> 
         <h3> <a href= Q&A.html style="color: #F9F9F9;"> Q&A </a> </h3> 
         <br>
         <h3> <a href="SafetyTips.html" style="color: #F9F9F9;"> Safety Tips</a> </h3>
@@ -63,26 +64,27 @@
         <h3> <a href="Resources.html" style="color: #F9F9F9;"> Resources</a></h3>
         <br>
     </div>
-    <div class="Questions"> 
+    <div class="randomcolumn"> </div>
+    <div class="column2"> 
         <h2> Questions and Answers</h2>
         <p>These are some common questions that our members have asked and we have answered. Please use our contact form if your questions have not been answered after exploring this page!</p>
         <ul> 
-            <li><strong>Does online dating work? </strong> </li>
+            <li><strong style="color: #6886c5;">Does online dating work? </strong> </li>
             <p> Online dating is not a guarantee, but it can be an adventure. While it works for some individuals it may or may not work for you. Here at Lovepoint, we have had many success stories, but online dating isn't for everyone. We can't promise that online dating will work for you—but Lovepoint can say, with certainty, that you won't know until you give it a shot. </p>
-            <li> <strong>Is onling dating safe? </strong></li>
+            <li> <strong style="color: #6886c5;">Is onling dating safe? </strong></li>
             <p> Online dating can be safe as long as you take the neccessary precautions, however this does not mean that negative incidents are never going to happen. It is important to keep yourself and your information safe. Lovepoint has provided additional tips for those who are cautious about online dating.</p>
-            <li><strong>Am I really being matched with someone specially for me, or is it all a random chance? </strong>  </li>
+            <li><strong style="color: #6886c5;">Am I really being matched with someone specially for me, or is it all a random chance? </strong>  </li>
             <p> Here at Lovepoint, we ask all members to provide us with their preferences and filters, from this we use our advanced algorithms to find individuals who may peak your interest. In addition to this feature, we also provide a randomized feature that certain members enjoy using as well. </p>
-            <li><strong> Will anyone actually read my profile, or they are just looking at my photos?</strong> </li>
+            <li><strong style="color: #6886c5;"> Will anyone actually read my profile, or they are just looking at my photos?</strong> </li>
             <p>Prior to clicking on your profile, users will look at your photos, but they will not have access to your full profile until they send you a message.</p>
-            <li> <strong>Should I buy a membership? </strong> </li>
+            <li> <strong style="color: #6886c5;">Should I buy a membership? </strong> </li>
             <p> If you wish to become a part of Lovepoint, we encourage you to purchase a membership plan in order to have full access to our services.</p>
-            <li> <strong> How much should I reveal about myself on my profile and to those I am matched with?</strong></li>
+            <li> <strong style="color: #6886c5;"> How much should I reveal about myself on my profile and to those I am matched with?</strong></li>
             <p> We encourage each user to provide a brief bio about themselves and their interests in their profiles, however we discourage the use of personal information such as your personal address, place of work address, daily schedule, full name, and other information that you do not feel comfortable sharing on a public platform.</p>
-            <li> <strong> I'm getting no matches or responses to the messages that I send out, what should I do?</strong> </li>
+            <li> <strong style="color: #6886c5;"> I'm getting no matches or responses to the messages that I send out, what should I do?</strong> </li>
             <p> This is a common complaint, and there are a few reasons it could happen. Give your profile a look over and see if there might be any off-putting remarks. Make sure you're sending messages that aren't too short and quippy, or too long and detailed. If you need some help, have a friend critique your profile. </p>
         </ul>
-    </div>
+    </div> 
     <!-- Footer -->
 <footer class="page-footer font-small mdb-color lighten-3 pt-4">
 
