--- a/store.html
+++ b/store.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
+    
     <script src="https://kit.fontawesome.com/e77eb6c954.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Galada&family=Josefin+Sans:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="storeSheet.css">
@@ -18,7 +18,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-xl sticky-top">
-    <a class="navbar-brand" href="#">Lovepoint</a>
+    <a class="navbar-brand" href="index.html">Lovepoint</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fa fa-bars"></i>
@@ -27,25 +27,20 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Subscriptions</a>
+        <a class="nav-link" href="blog.html">Blog</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href=" #">Blog</a>
+        <a class="nav-link" href="store.html">Subscriptions</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href=" #">Q & A</a>
+        <a class="nav-link" href="Q&A.html">Q & A</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href=" #">Contact Us</a>
+        <a class="nav-link" href="contact.html">Contact Us</a>
       </li>
-
-      <li class="nav-item">
-        <a class="nav-link" href=" #">maybe</a>
-      </li>
-
     </ul>
     </div>
   </nav>
