added index.html link

--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-xl sticky-top">
-        <a class="navbar-brand" href="#">Lovepoint</a>
+        <a class="navbar-brand" href="index.html">Lovepoint</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
@@ -32,17 +32,16 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto">
 
+          <li class="nav-item">
+            <a class="nav-link" href="store.html">Subscriptions</a>
+          </li>
 
           <li class="nav-item">
             <a class="nav-link" href="blog.html">Blog</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="store.html">Subscriptions</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="Q&A.html">Q&A</a>
+            <a class="nav-link" href="Q&A.html">FAQ</a>
           </li>
 
           <li class="nav-item">
