--- a/Q&A.html
+++ b/Q&A.html
@@ -6,6 +6,7 @@
     <title>FAQ & More!</title>
     <link href="https://fonts.googleapis.com/css2?family=Galada&family=Josefin+Sans:ital,wght@0,300;0,400;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/24f262ca21.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="Q&A.css">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -13,7 +14,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-xl sticky-top">
-        <a class="navbar-brand" href="#">Lovepoint</a>
+        <a class="navbar-brand" href="index.html">Lovepoint</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
           <i class="fa fa-bars"></i>
@@ -21,24 +22,21 @@
 
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav ml-auto">
+
           <li class="nav-item">
-            <a class="nav-link" href="#"></a>
+            <a class="nav-link" href="store.html">Subscriptions</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href=" #">Subscriptions</a>
+            <a class="nav-link" href="blog.html">Blog</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href=" #">Blog</a>
+            <a class="nav-link" href="Q&A.html">FAQ</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href=" #">FAQ</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href=" #">Contact Us</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
 
         </ul>
