added http links

--- a/Resources.html
+++ b/Resources.html
@@ -68,16 +68,16 @@
         <p> Please remember that no method is fool proof or perfect. If you have a negative experience, please know that it is not your fault and help is available. Please report any incidents to Lovepoint or consider reaching out to one or more of the resources below </p>
         <p>If you feel you are in immediate danger or need emergency assistance, call 911 or your local law enforcement</p> 
         <p> <strong style="color: #6886c5;">RAINN’s National Sexual Assault Hotline</strong> </p>
-        <p>1-800-656-HOPE (4673) | <a href="www.rainn.org">www.rainn.org</a> </p>
+        <p>1-800-656-HOPE (4673) | <a href="http://www.rainn.org">www.rainn.org</a> </p>
         <p> <strong style="color: #6886c5;">Planned Parenthood </strong></p>
         <p> 1-800-230-7526 |
-        <a href="www.plannedparenthood.org">www.plannedparenthood.org</a> </p> 
+        <a href="http://www.plannedparenthood.org">www.plannedparenthood.org</a> </p> 
         <p> <strong style="color: #6886c5;"> National Domestic Violence Hotline</strong></p>
-        <p> 1-800-799-SAFE (7233) or 1-800-787-3224 | <a href="www.thehotline.org"> www.thehotline.org</a></p>
+        <p> 1-800-799-SAFE (7233) or 1-800-787-3224 | <a href="http://www.thehotline.org"> www.thehotline.org</a></p>
         <p> <strong style="color: #6886c5;"> National Sexual Violence Resource Center</strong></p>
-        <p> 1-877-739-3895 | <a href="www.nsvrc.org"> www.nsvrc.org</a> </p>
+        <p> 1-877-739-3895 | <a href="http://www.nsvrc.org"> www.nsvrc.org</a> </p>
         <p><strong style="color: #6886c5;"> LGBT National Help Center</strong></p> 
-        <p> 1-888-843-4564 | <a href="www.glbtnationalhelpcenter.org"> www.glbtnationalhelpcenter.org</a>
+        <p> 1-888-843-4564 | <a href="http://www.glbtnationalhelpcenter.org"> www.glbtnationalhelpcenter.org</a>
     </div>
        <!-- Footer -->
 <footer class="page-footer font-small mdb-color lighten-3 pt-4">
