--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,7 @@
     <main>
 
 
+      <form>
         <div class="form">
             
             <label for= "Name"> Name*</label><br>
@@ -104,6 +105,7 @@
             <input class="button" type="submit" value="Send">
         </div>
 
+      </form>
     </main>
 
 <!-- Footer -->
