--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-xl sticky-top">
-    <a class="navbar-brand" href="#">Lovepoint</a>
+    <a class="navbar-brand" href="index.html">Lovepoint</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <i class="fa fa-bars"></i>
@@ -33,7 +33,7 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#About">About</a>
+          <a class="nav-link" href="store.html">Subscriptions</a>
         </li>
 
         <li class="nav-item">
@@ -41,7 +41,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href=" #">FAQ</a>
+          <a class="nav-link" href="Q&A.html">FAQ</a>
         </li>
 
         <li class="nav-item">
