--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="subscriptions.html">Subscriptions</a>
+          <a class="nav-link" href="store.html">Subscriptions</a>
         </li>
 
         <li class="nav-item">
